@@ -7,3 +7,11 @@
 ![image](https://github.com/DanielAndrei1/JavaFX-desktop-application/assets/44091613/7f44d3d7-bce6-462f-b305-0658faa1ea49)
 ![image](https://github.com/DanielAndrei1/JavaFX-desktop-application/assets/44091613/bfa075db-5ead-4b2a-9dd4-a80ca3ad718b)
 ![image](https://github.com/DanielAndrei1/JavaFX-desktop-application/assets/44091613/746df452-5e18-4802-83a7-a2459b41077b)
+
+# Installation and running the file
+1. Download or clone the repo.
+2. If you are getting the following error when running the app: Error: JavaFX runtime components are missing, and are required to run this application then follow step 3
+3. Using Eclipse or Intellij change the VM Arguments/VM Options as follows --module-path "put_here_the_path" --add-modules=javafx.controls,javafx.fxml
+For example if you extracted the file and put it in a Java Applications in drive D you put: --module-path "D:\Java applications\JavaFX-desktop-application-main\Nio\jar_files" --add-modules=javafx.controls,javafx.fxml
+4. Next you will need to change the Database Connection:
+![image](https://github.com/DanielAndrei1/JavaFX-desktop-application/assets/44091613/eacf7c87-626c-4042-9518-feac894fa088)
